[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seek-root"
version = "0.1.0"
description = "面向业务人员的因果推断Web应用 - 让每个人都能找到数据背后的因果关系"
readme = "README.md"
authors = [{ name = "Seek Root Team", email = "team@seekroot.ai" }]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["causal-inference", "causal-discovery", "data-analysis", "dowhy", "econometrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "dash>=2.17",
    "dash-mantine-components>=0.14",
    "polars>=1.0",
    "dowhy[econml,plotting]>=0.8",
    "econml>=0.14",
    "plotly>=5.18",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "openai>=1.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pyarrow>=14.0",
    "jinja2>=3.1",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
docker = [
    "gunicorn>=21.0",
]

[project.scripts]
seek-root = "seek_root.cli:main"

[project.urls]
Homepage = "https://github.com/seek-root/seek-root"
Documentation = "https://seek-root.readthedocs.io"
Repository = "https://github.com/seek-root/seek-root"
Issues = "https://github.com/seek-root/seek-root/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
seek_root = ["assets/*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
